# needles

./: .cursorrules  .gitignore  CMakeLists.txt  PROGRESS_REPORT.md  PROGRESS_REPORT_CPU_OPTIMIZATION.md  README.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
NeedlesVST/: .clang-format  CMakeLists.txt  NeedlesVST.jucer  check_code_quality.sh
NeedlesVST/Source/: AudioSynthesis.cpp  AudioSynthesis.h  ImageLoader.cpp  ImageLoader.h  ImageScanner.cpp  ImageScanner.h  ParameterManager.cpp  ParameterManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h  StereoProcessor.cpp  StereoProcessor.h
NeedlesVST/Tests/: TestHelpers.h  catch_main.cpp  setup_catch2.sh
NeedlesVST/Tests/Integration/: NeedlesWorkflowTest.cpp  RGBChannelTest.cpp
NeedlesVST/Tests/TestAssets/sample_images/: setup_test_images.sh
NeedlesVST/Tests/Unit/: AudioSynthesisTest.cpp  ImageLoaderTest.cpp  ImageScannerTest.cpp  ParameterRangeTest.cpp  StereoProcessorTest.cpp
requirements/: client-idea-document.md  prd.md
specs/001-needles/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-needles/checklists/: requirements.md
specs/001-needles/contracts/: plugin-interface.md
specs/002-channel-panning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-channel-panning/checklists/: requirements.md
specs/002-channel-panning/contracts/: AudioProcessingIntegrationContract.h  RGBChannelParameterContract.h  StereoProcessorContract.h
src/: ImageLoader.cpp  ImageLoader.h
src/audio/: PluginProcessor.cpp  PluginProcessor.h
src/gui/: PluginEditor.cpp  PluginEditor.h
